# redis_fdw_rs

./: .env.cluster-test.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PUSHDOWN_TESTING_GUIDE.md  README.md  REDIS_TABLE_TYPES.md  REORGANIZATION_SUMMARY.md  TESTING.md  WHERE_PUSHDOWN.md  demo_pushdown.sh  docker-compose.cluster-test.yml  gpg.key  install.sh  quick_test_verify.sh  redis_fdw_rs.control  verify_pushdown_functionality.sh
.claude/agents/: coder.md  reviewer.md
.claude/commands/: code-review-loop.md
.github/workflows/: ci.yaml  release-apt.yaml  release.yaml
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
dists/bookworm/: InRelease  Release  Release.gpg
dists/bullseye/: InRelease  Release  Release.gpg
dists/jammy/: InRelease  Release  Release.gpg
dists/noble/: InRelease  Release  Release.gpg
examples/: 08_ttl_support.sql  09_pushdown_optimization.sql  11_bulk_insert_and_large_join.sql  12_copy_from_file.sql  14_import_foreign_schema.sql  17_cluster_mode.sql
load_tests/: hash_table_test.sql  list_table_test.sql  mixed_operations_test.sql  read_heavy_test.sql  redis_fdw_benchmark.sh  redis_fdw_load_test.sh  set_table_test.sql  setup_load_test.sh  string_table_test.sql  write_heavy_test.sql  zset_table_test.sql
packaging/: SETUP.md
packaging/apt/: distributions.template  install.sh.template  publish-repo.sh
packaging/deb/: build-deb.sh  control.template
packaging/test/: test-install.sh
pg_regress/expected/: setup.out
scripts/: cluster_test.sh  run_integration_tests.sh  start-redis-cluster.sh  validate_cluster_setup.sh
scripts/cluster/: init-cluster.sh
src/: async_runtime.rs  lib.rs
src/auth/: mod.rs
src/core/: column_utils.rs  connection.rs  connection_factory.rs  data_loader.rs  ddl_hook.rs  explain.rs  handlers.rs  join.rs  mod.rs  pool_manager.rs  schema_import.rs  state.rs  state_manager.rs  truncate.rs  validator.rs
src/join/: foreign_join.rs  mod.rs  planner.rs  types.rs
src/query/: cost_estimation.rs  limit.rs  mod.rs  pushdown.rs  pushdown_types.rs  scan_ops.rs  scan_ops.rs.tmp.213430.3bbd7aed92aa
src/redis_fdw/: connection.rs  data_set.rs  handlers.rs  interface.rs  mod.rs  (+12 more)
(+82 files in other folders)
