[package]
name = "redis_fdw_rs"
version = "0.5.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg14"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "=0.18.1"
redis = { version = "1.2.2", features = ["cluster", "streams", "r2d2", "tls-rustls", "tls-rustls-insecure"] }
thiserror = "2.0.18"
rand = "0.10.1"
r2d2 = "0.8.10"
smallvec = "1.15.1"

[dev-dependencies]
pgrx-tests = "=0.18.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
